# any2wav

./: .gitignore  README.md  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  start.bat
any2wav/: __init__.py  __main__.py  cli.py  converter.py  detector.py  logger.py
